reduce right column size in hopes of finally squishing display bug

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -30,7 +30,7 @@ main {
 }
 #right-column {
   animation: fadein 5s;
-  width: 67%;
+  width: 64%;
   float:right;
   margin-right:4%;
 }
